kubernetes/ntfy/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy
  labels:
    app: ntfy
spec:
  serviceName: ntfy
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          args: ["serve"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: cache
              mountPath: "/var/cache/ntfy"
  volumeClaimTemplates:
    - metadata:
        name: cache
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
