kubernetes/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  type: NodePort
  selector:
    app: ntfy
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32080
